--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+.idea
+.idea/
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -131,3 +133,5 @@ Thumbs.db
 /packages/*/.env
 /packages/*/.env.*
 !packages/server/.env.example
+/packages/server/bin/clean-swagger.php
+/packages/server/public/swagger/
