Setiing of DI Container: - created ContainerFactory class and added compilation in production mode - defined logger Monolog - working with slimPHP, middleware etc. etc.

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
   ],
   "autoload": {
     "psr-4": {
-      "Casino\\Client\\": "packages/client/src/"
+      "Casino\\Client\\": "packages/client/src/",
+      "Casino\\Server\\": "packages/server/src/"
     }
   },
   "scripts": {
