Created and performed set of unit tests: Tests.Unit Tests (24)
✔ DefaultGameFactoryTest
✔ InMemoryGameRepositoryTest
✔ DefaultGameServiceTest

Time: 00:00.062, Memory: 14.00 MB
OK (24 tests, 125 assertions)

--- a/packages/server/composer.json
+++ b/packages/server/composer.json
@@ -42,7 +42,7 @@
   },
   "scripts": {
     "test": "codecept run",
-    "test:unit": "codecept run unit",
+    "test:unit": "codecept run Unit",
     "test:functional": "codecept run functional",
     "test:integration": "codecept run integration",
     "cs:check": "phpcs",
