--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
       "@phpstan"
     ],
     "phpstan": "phpstan analyse packages/client/src --level=5",
-    "serve-client": "php -S localhost:8080 -t packages/client/public",
+    "serve-client": "php -S localhost:8080 -t packages/client/src",
     "serve-server": "cd packages/server && composer serve"
   },
   "config": {
