Created MySQLGameRepository. Refactored Repository principles - added Abstract class to prevent duplicate initial code

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -7,13 +7,13 @@ APP_LOG_LEVEL=debug
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=casino_jackpot
-DB_USERNAME=root
+DB_USERNAME=casino_user
 DB_PASSWORD=
 
 # Game settings
 GAME_INITIAL_CREDITS=10
 GAME_SPIN_COST=1
-GAME_SYMBOLS_SETTINGS={"chars":['C','L','O','W'],"values":[10,20,30,40],"names":["Cherry","Lemon","Orange","Watermelon"]}
+GAME_SYMBOLS_SETTINGS={"chars":["C","L","O","W"],"values":[10,20,30,40],"names":["Cherry","Lemon","Orange","Watermelon"]}
 
 # House advantage settings (house always wins)
 GAME_CHEAT_CONFIG={"thresholds":[40,60],"chances":[30,60]}
